src/app/pages/form-creator/components-page/components-page.component.less
@import '../../../../common.less';
@import '../../../../colors.less';

nz-layout {
  background-color: @transparent;
}

#footerdiv {
  position: fixed;
  bottom: @spacing0;
  right: @spacing0;
  width: @width-full;
  padding: @spacing12;
  background: @background-white;
  border-top: @border-default;
  z-index: 100;
}
.footer-inner-row {
  width: 100%;
  align-items: center;
}

.next-button {
  margin-left: @spacing8;
  margin-right: @spacing8;
}

.version-controls {
  display: inline-flex;
  align-items: center;
  gap: @spacing8;
}

.version-selector {
  width: 120px;
}

.redo-undo-container {
  margin-right: @spacing20;
}

.inline-edit-container {
  margin-right: @spacing20;
}

.version-icon-wrapper {
  display: inline-block;
  cursor: pointer;
  margin-left: 4px;
}

.version-info-icon,
.version-diff-icon {
  vertical-align: middle;
  color: rgba(0, 0, 0, 0.45);
}

